--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "leaflet": "^1.3.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-icons": "^3.2.2",
+    "react-scripts": "2.1.1",
+    "react-spinners": "^0.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
