--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
     "react-scripts": "2.1.1",
-    "react-spinners": "^0.4.7"
+    "react-spinners": "^0.4.7",
+    "yamljs": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
