--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "leaflet": "^1.3.4",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
