--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@turf/turf": "^5.1.6",
     "leaflet": "^1.3.4",
+    "marked": "^0.5.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
