--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@turf/turf": "^5.1.6",
     "leaflet": "^1.3.4",
-    "marked": "^0.5.2",
     "node-sass": "^4.10.0",
+    "nodinatim": "^2.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.1",
     "react-spinners": "^0.4.7",
+    "serverless-finch": "^2.3.2",
     "yamljs": "^0.3.0"
   },
   "scripts": {
