--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^3.2.2",
     "react-scripts": "2.1.1",
     "react-spinners": "^0.4.7",
+    "react-table-filter": "^1.1.3",
     "yamljs": "^0.3.0"
   },
   "scripts": {
